# binance-bot

./: .env  .gitignore  README.md  pyproject.toml
src/binance_bot/: bot.py  cli.py  config.py  logger.py
